fixes alignment

--- a/client/src/app/shared/components/notifications-bar/notifications-bar.component.scss
+++ b/client/src/app/shared/components/notifications-bar/notifications-bar.component.scss
@@ -19,9 +19,6 @@ $subtext-color: #cdd6f4;
 }
 
 .notifications-bar {
-    // position: absolute;
-    // left: 0;
-    // top: 0;
     max-width: 500px;
     min-width: 500px;
 
@@ -50,6 +47,10 @@ $subtext-color: #cdd6f4;
         list-style: none;
         margin: 0;
         padding: 0;
+        max-height: 500px;
+        overflow-y: auto;
+        padding-top: 16px;
+        padding-bottom: 16px;
 
         li {
             display: flex;
